Fix navbar disappearing
TEPF-169 Missing logout function
Restyle navbar to not spill over on small screens
Fix admin column widths on larger screens and color change

--- a/f-tep-portal/src/main/resources/app/styles/less/common/navbar.less
+++ b/f-tep-portal/src/main/resources/app/styles/less/common/navbar.less
@@ -31,13 +31,35 @@
                     background-color: @bg;
                     cursor: pointer;
                     height: @navbar-height;
-                    padding: 0 1rem;
                     .border(border-right, @bg);
+                    @media (max-width:1100px) and (min-width: @xs-max-width) {
+                        &:hover {
+                            span {
+                                display:block;
+                            }
+                            .material-icons {
+                                 display: none;
+                            }
+                        }
+                    }
+                    a {
+                        color: @text;
+                        padding: 0;
+                    }
                     p {
+                        padding: 14px 1rem 0 1rem;
                         padding-top: 14px;
                         vertical-align: middle;
                         .material-icons {
                             font-size: 1.1rem;
+                        }
+                        @media (max-width:1100px) and (min-width: @xs-max-width) {
+                            .material-icons {
+                                 font-size: 1.4rem;
+                            }
+                            span {
+                                display: none;
+                            }
                         }
                     }
                     &.active {
@@ -63,13 +85,6 @@
                 .login {
                     background-color: @error;
                     color: @text-light;
-                }
-                @media (max-width:860px) {
-                    font-size: 0.8rem;
-                    padding: 0 16px;
-                    li {
-                        padding: 0 0.5rem;
-                    }
                 }
             }
         }
